Fix grid misalignment

--- a/assets/sass/patterns/molecules/tabbed-navigation.scss
+++ b/assets/sass/patterns/molecules/tabbed-navigation.scss
@@ -13,7 +13,7 @@
     grid-column: 1/10;
   }
 
-  & ~ .main-content-grid {
+  &:not(.hidden) ~ .main-content-grid {
     grid-row: 2;
   }
 
